--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #1D4221;
+    background-color: #245f2a;
     color: white;
     font-family: "Bai Jamjuree", sans-serif;
     display: flex;
