--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #245f2a;
+    background-color: #1D4221;
     color: white;
     font-family: "Bai Jamjuree", sans-serif;
     display: flex;
@@ -14,11 +14,13 @@ button {
     color: white;
     font-family: "Bai Jamjuree", sans-serif;
 }
+
 .passo {
     display: none;
 }
+
 .passo.ativo {
-    display: block;
+    display:block;
 }
 
 main {
@@ -26,6 +28,6 @@ main {
     max-width: 90%;
 }
 
-img  {
+img {
     max-width: 90%;
 }
